testsuite/poke.pkl/printf-diag-18.pk
/* { dg-do compile } */

fun f = void: {}
printf "%v\n",
       f; /* { dg-error "invalid type.*\n.*void" } */
